# AntPlot

./: .dockerignore  .gitignore  ANTENNA_PLOT_AGENT_SPEC.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_OUTLINE.md  README.md  SECURITY.md  config.yaml  install_and_start.bat  main.py  plot_direction_patterns.py  plot_s11.py  pyproject.toml  retune_s11_csv.py  run_backend_preview.bat  run_direction_patterns.bat  run_paperplotter_ui.bat  run_s11_ui.bat  start_app.bat  start_app.ps1  start_portable.bat
.github/workflows/: publish-container.yml  validate.yml
docs/: DATA_FORMATS.md  TEST_REPORT_v0.1.0.md  USER_GUIDE.md  backend_api_examples.md
docs/images/: README.md
downloads/: SHA256SUMS.txt
examples/: example_axial_ratio.csv  example_efficiency_auto.csv  example_efficiency_refs.csv  example_gain.csv  example_hpbw.csv  example_no_header_space_decimal_comma.csv  example_pattern_cocross.csv  example_smith.csv  example_vna_with_notes.csv  example_vswr.csv  pattern_horizontal.csv  pattern_vertical.csv  project_settings_410_490.yaml  radiation_phi_360.csv  radiation_polar_eh.csv
examples/acceptance/: s11_410_490.csv
examples/gallery/: README.md  pattern_polar.csv  s11_standard.csv
examples/report_model_cases/: case_gain_freq.csv  case_pattern_grid.csv  case_pattern_phi360.csv  (+2 more)
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
styles/: ieee_awpl.yaml  ieee_tap.yaml  paper_bold.yaml
tools/: build_portable_package.ps1  docker_start.py  final_acceptance.py  recognition_regression.py
(+65 files in other folders)
